--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -48,6 +48,9 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <listener>
+    <listener-class>com.mx.utils.Listener.MySessionListener</listener-class>
+  </listener>
 
   <!--DispatcherServlet注册-->
   <servlet>
